[gd_scene load_steps=10 format=3 uid="uid://d0gfkr026nnm5"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_6qwq7"]
[ext_resource type="PackedScene" uid="uid://bklu0d82sxmd" path="res://objects/PixelateGroup.tscn" id="2_pdy4w"]
[ext_resource type="Shader" path="res://shaders/pixelate_group.gdshader" id="3_hmpsw"]
[ext_resource type="Script" path="res://scripts/PlayerBody.gd" id="4_svada"]
[ext_resource type="Texture2D" uid="uid://b61d4et3xr2jv" path="res://textures/white_circle.svg" id="5_plkhp"]
[ext_resource type="Texture2D" uid="uid://cc1r4w851mq5u" path="res://textures/eye.svg" id="7_8n25i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_346h8"]
radius = 43.0
height = 102.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oje20"]
resource_local_to_scene = true
shader = ExtResource("3_hmpsw")
shader_parameter/pixel_size = 4
shader_parameter/zoom = Vector2(1.5874, 1.5874)

[sub_resource type="Curve" id="Curve_txsye"]
max_value = 30.0
_data = [Vector2(0, 20), 0.0, 0.0, 0, 0, Vector2(1, 30), -4.87179, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("body")]
script = ExtResource("1_6qwq7")
body = NodePath("PixelateGroup/PlayerBody")
sneak_animation_speed = 13.0
whistle_animation_speed = 8.0
duck_animation_speed = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_346h8")
one_way_collision_margin = 0.0

[node name="PixelateGroup" parent="." instance=ExtResource("2_pdy4w")]
material = SubResource("ShaderMaterial_oje20")

[node name="PlayerBody" type="Polygon2D" parent="PixelateGroup"]
color = Color(0.294118, 0.729412, 0.933333, 1)
antialiased = true
script = ExtResource("4_svada")
width_multiplier = 0.9

[node name="Tummy" type="Polygon2D" parent="PixelateGroup/PlayerBody"]

[node name="Mouth" type="Sprite2D" parent="PixelateGroup/PlayerBody"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.02, 0.05)
texture = ExtResource("5_plkhp")

[node name="Ear" type="Line2D" parent="PixelateGroup/PlayerBody"]
width = 1.0
width_curve = SubResource("Curve_txsye")
default_color = Color(0.294118, 0.729412, 0.929412, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Eye" type="Sprite2D" parent="PixelateGroup/PlayerBody"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_8n25i")

[node name="LegFront" type="Sprite2D" parent="PixelateGroup/PlayerBody"]
modulate = Color(0.372549, 0.666667, 0.933333, 1)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_plkhp")

[node name="LegBack" type="Sprite2D" parent="PixelateGroup/PlayerBody"]
modulate = Color(0.372549, 0.666667, 0.933333, 1)
z_index = -1
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_plkhp")
